web/main.css
@import url(https://fonts.googleapis.com/css?family=Ubuntu:400,700);
@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,700);

body {
  font-family: "Ubuntu", sans-serif;
  margin: 0;
}

h1 {
  font-size: 2.5em;
  margin: 0.3em 0;
}

h2 {
  font-size: 2em;
  margin: 0.3em 0;
}

h3 {
  font-size: 1.5em;
  margin: 0.5em 0;
}

.visually-hidden {
  position: absolute;
  left:     -10000px;
  top:      auto;
  width:    1px;
  height:   1px;
  overflow: hidden;
}

.page-title {
  margin-top: 100px;
  display: flex;
  flex-direction: column;
  background-color: #0081C7;
  color: white;
  text-align: center;
  padding: 25px;
}

.picture-frame {
  display: flex;
  align-items: center;
}

.picture-frame .picture-adjacent {
  margin: 0 2em;
}

img {
  max-width: 100%;
  max-height: 50vh;
  align-self: center;
}

.body-text {
  display: flex;
  flex-direction: column;
  margin: 2em;
}

.page-content {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.button {
  padding: 0.5em 1em;
  border-radius: .5em;
  background-color: #0081C7;
  display: inline-block;
  font-size: 1.2em;
}

.button:hover {
  background-color: #5A7931;
}

.button a {
  color: white;
  text-decoration: none;
}

@media (max-width: 1000px) {
  .picture-frame {
    flex-direction: column;
  }
}

@media (min-width: 1000px) {
  .picture-frame {
    margin: 2em;
  }

  .picture-frame-left {
    flex-direction: row;
  }

  .picture-frame-right {
    flex-direction: row-reverse;
  }
}

.call-to-action {
  background-color: #DAD9D5;
  padding: 0.2em 2em;
  text-align: center;
}

.social-media a {
  text-decoration: none;
}

.fb-icon {
  color: blue;
  transition color 0.2s;
  font-size: 3em;
  padding: 5px, 10px, 0, 10px;
}

.fb-icon:hover {
  color: #aaaaaa;
}

.inst-icon {
  color: red;
  font-size: 3em;
  padding: 0, 10px;
  transition color 0.2s;
  padding: 5px, 10px, 0, 10px;
}

.inst-icon:hover {
  color: #aaaaaa;
}

.page-content .section {
  max-width: 1000px;
}

.section-intro {
  padding: 0 2em;
}

.section h3 {
  color: #5A7931;
}

.section .picture-frame {
  background-color: #DAD9D5;
  margin: 2em;
  padding: 2em;
  box-shadow: .3em .3em .3em #7A7776;
}

.page-header {
  position: fixed;
  top: 0px;
  height: 80px;
  width: 100%;
  background-color: white;
  border-bottom-color: #0081C7;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  display: block;
  padding: 1em 0;
}

.page-header .header-inside {
  max-width: 1000px;
  height: 100%;
  margin: 0 auto;
  display: block;
}

.page-header .header-left {
  float: left;
}

.page-header .header-right {
  float: right;
}

.page-header .header-content {
  height: 100%;
  margin: 0 2em;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.page-header img {
  max-height: 5em;
}

.menu ul {
  display: flex;
  flex-direction: row;
}

.menu li {
  list-style: none;
  padding: 1em;
}

.menu li a {
  text-decoration: none;
  font-weight: bold;
  font-size: 1.3em;
  color: #7A7776;
}

.menu li a:hover {
  color: #0081C7;
}

.menu li a.current {
  color: #0081C7;
}

